--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,23 @@
       "use": "@vercel/static"
     },
     {
+      "src": "landing/*.html",
+      "use": "@vercel/static"
+    },
+    {
       "src": "*.css",
       "use": "@vercel/static"
     },
     {
+      "src": "landing/css/*.css",
+      "use": "@vercel/static"
+    },
+    {
       "src": "*.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "landing/js/*.js",
       "use": "@vercel/static"
     },
     {
@@ -23,6 +35,24 @@
     }
   ],
   "routes": [
+    {
+      "src": "/landing/(.*)",
+      "dest": "/landing/$1"
+    },
+    {
+      "src": "/landing/css/(.*)",
+      "dest": "/landing/css/$1",
+      "headers": {
+        "Content-Type": "text/css"
+      }
+    },
+    {
+      "src": "/landing/js/(.*)",
+      "dest": "/landing/js/$1",
+      "headers": {
+        "Content-Type": "application/javascript"
+      }
+    },
     {
       "src": "/styles.css",
       "dest": "/styles.css",
