--- a/backend/env.example
+++ b/backend/env.example
@@ -4,7 +4,10 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/anylingo
+# MongoDB Atlas Connection String
+# Replace <password> with your actual password
+# Replace cluster0.xxxxx.mongodb.net with your actual cluster URL
+MONGODB_URI=mongodb+srv://anylingo-user:<password>@cluster0.xxxxx.mongodb.net/anylingo?retryWrites=true&w=majority
 MONGODB_URI_PROD=your_production_mongodb_uri
 
 # JWT Secret
