Add simple Vercel function

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,18 +1,14 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "working-server.js",
-      "use": "@vercel/node"
+  "functions": {
+    "simple-vercel.js": {
+      "maxDuration": 10
     }
-  ],
+  },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "working-server.js"
+      "dest": "/simple-vercel.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 } 
