Fix Vercel deployment - use proper api directory structure

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "simple-vercel.js": {
-      "maxDuration": 10
-    }
-  },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "simple-vercel.js"
+      "dest": "/api"
     }
   ]
 } 
