Fix Vercel routing for JS/CSS files and favicon paths

--- a/vercel.json
+++ b/vercel.json
@@ -126,6 +126,20 @@
       }
     },
     {
+      "src": "/js/(.*)",
+      "dest": "/js/$1",
+      "headers": {
+        "Content-Type": "application/javascript"
+      }
+    },
+    {
+      "src": "/css/(.*)",
+      "dest": "/css/$1",
+      "headers": {
+        "Content-Type": "text/css"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
