--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
       "use": "@vercel/static"
     },
     {
+      "src": "css/*.css",
+      "use": "@vercel/static"
+    },
+    {
       "src": "landing/css/*.css",
       "use": "@vercel/static"
     },
@@ -27,6 +31,10 @@
     },
     {
       "src": "*.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "js/*.js",
       "use": "@vercel/static"
     },
     {
