--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "AnyLingo Backend API",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node clean-server.js",
+    "dev": "nodemon clean-server.js",
+    "hash-passwords": "node hash-existing-passwords.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
