--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public (commented out - we need our Next.js public directory)
 
 # Storybook build outputs
 .out
